<resources>
    <string name="app_name">PetVacay</string>
    <string-array name="profileLoggedOut_array">
        <item>How it Works</item>
        <item>Why Host?</item>
        <item>List Your Space</item>
        <item>Help</item>
    </string-array>
    <string-array name="profileLoggedIn_array">
        <item>Invite Friends</item>
        <item>Why Host?</item>
        <item>List Your Space</item>
        <item>I am a Pet Owner</item>
        <item>Help</item>
    </string-array>
    <string name="AskToLogin">Log In or Sign Up</string>
    <string name="AskToLogout">Log Out</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="howitworks_fragment">How It Works Fragment</string>
    <string name="whyhost_fragment">Why HostFragment</string>
    <string name="listyourspace_fragment">List Your Space Fragment</string>
    <string name="help_fragment">Help Fragment</string>
    <string name="tap">Add photos to your listing</string>
    <string name="title_activity_list_your_space">ListYourSpaceActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_how_it_works">HowItWorksActivity</string>
    <string name="HSWTitleOne">SEND YOUR PET ON VACAY</string>
    <string name="HSWTitleTwo">WELCOME TO PetVacay</string>
    <string name="HSWTitleThree">FIND THE PERFECT VACATION HOME FOR YOUR PET</string>
    <string name="HSWTitleFour">BOOK IT IN A SNAP</string>
    <string name="HSWTextOne">Knowing your pet is being loved and cared for while you\'re travelling changes everything.</string>
    <string name="HSWTextTwo">Safe,affordable and convenient boarding service for your pets Two</string>
    <string name="HSWTextThree">Search by location, home type, and more. Read reviews and see what other pet parents have to say about each sitter and home.</string>
    <string name="HSWTextFour">Connect with pet lovers, confirm boarding dates - all through PetVacay\'s trusted services.</string>
    <string name="title_activity_why_host">WhyHostActivity</string>
    <string name="WHTitleOne">MEET PET PARENTS IN YOUR NEIGHBORHOOD</string>
    <string name="WHTitleTwo">FUND YOUR NEXT ADVENTURE</string>
    <string name="WHTitleThree">DISCOVER YOUR PERSONAL PET TYPE</string>
    <string name="WHTextOne">Become a host and enjoy your time with the furry companion</string>
    <string name="WHTextTwo">earn money to pay the bills and plan your next vacation</string>
    <string name="WHTextThree">Try it out before you make a big commitment to become a pet parent</string>
    <string name="generic_error">:-O Something went wrong!</string>
    <string name="search">Search</string>
    <string name="whereto">Enter your city here!</string>
    <string name="sitter_std_string">is a verified host!</string>
    <string name="reviews">Reviews</string>
    <string name="review">Review</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login">Log In</string>
    <string name="or">or</string>
    <string name="signup">Sign Up</string>
    <string name="with_email">with Email</string>
    <string name="showMore">Show More</string>
    <string name="bySigningUp">By signing up, I agree to PetVacay\'s</string>
    <string name="petVacay">petvacay</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgotPwd">Forgot Password?</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="checkEmail">Please check your email address!</string>
    <string-array name="terms_array">
        <item name="terms">Terms of Service</item>
        <item name="privacy">Privacy Policy</item>
        <item name="guestRefund">Guest Refund Policy</item>
        <item name="hostGuarantee">Host Guarantee Terms</item>
    </string-array>
    <string name="comma">,</string>
    <string name="full_stop">.</string>
    <string name="and">and</string>
    <string name="title_activity_map">Map It Out!</string>
    <string name="ellipsis" msgid="7899829516048813237">"…"</string>
    <string name="title_activity_login_signup">LoginSignupActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="login_error">Log In Error</string>
    <string name="signup_error">Sign Up Error</string>
    <string name="invalid_cred_msg">Invalid email or password. Please try again.</string>
    <string name="user_exists_err_msg">That email address is already in use.</string>
    <string name="OK">OK</string>
    <string name="alert_image_content_description">Alert Image</string>
    <string name="title_activity_booking_details">Booking details</string>
    <string name="price">Price</string>
    <string name="dates">Dates</string>
    <string name="confirm_and_pay">Confirm Details &amp; Request</string>
    <string name="add_payment">Add payment method</string>
    <string name="only_charge">You\'ll only be charged if the host accepts your request within 24 hours.</string>
    <string name="say_hello_1">Tell your pet\'s host</string>
    <string name="say_hello_2">, "Hello"</string>
    <string name="say_hello_det_1">Let</string>
    <string name="say_hello_det_2"> know more about your adorable pet!</string>
    <string name="msg_host">Message your pet\'s host ...</string>
    <string name="pick_up">Pick Up</string>
    <string name="drop_off">Drop Off</string>
    <string name="sel_date">Select Date</string>
    <string name="total">Total</string>
    <string name="times">x</string>
    <string name="nights">nights</string>
    <string name="service_fee">Service Fee</string>
    <string name="sel_drop_date">Select Drop-off Date</string>
    <string name="sel_pickup_date">Select Pick-up Date</string>
    <string name="title_activity_pet_owner_profile">PetOwnerProfileActivity</string>
    <string name="new_pet_request">You have a new pet request! Tap here to see your new furry friend!</string>
    <string name="booking_request_submitted">Your booking request has been submitted!</string>
    <string name="congrats_new_friend">Congratulations on your new furry friend!</string>
    <string name="booking_request_accepted">Your booking request has been accepted! Tap here to see your booking details!</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="message_from">Here\'s a message from</string>
    <string name="exclamation">!</string>
    <string name="booking_request_decline">is unable to host your pet! Find another lovely home for your pet on PetVacay!</string>
    <string name="RemoveCurrentPhoto">Remove Current Photo</string>
    <string name="TakePhoto">Take Photo</string>
    <string name="ChoosefromLibrary">Choose from Library</string>
    <string name="notification_submitted">has been notified!</string>
    <string name="title_activity_posting">PostingActivity</string>
    <string name="browse_title"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="init_text">00:00</string>
    <string name="play_pause_description">Play Pause Button</string>
    <string name="loading">Loading…</string>
    <string name="no_video_found">No video was found</string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">Version: %1$s</string>
    <string name="popular_header">Popular Videos</string>
    <string name="preferences">PREFERENCES</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="should_start">shouldStart</string>
    <string name="start_position">startPosition</string>
    <string name="search_results">Search Results</string>
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="oops">Oops</string>
    <string name="yourbookings">Your Bookings</string>
    <string name="whenYouBook">When you book, you\'ll see your booking history here</string>
    <string name="nobookings">No Bookings</string>
    <string name="title_activity_swipe_view">SwipeViewActivity</string>
    <string name="title_activity_details_page">DetailsPageActivity</string>
    <string name="sample_review">This location is perfect for the downtown visitor. Located walking
        distance from Grand Central Station, theatre area and MSG. Guillermero was excellent host and
        the home was excellent and clean. Overall an excellent experience and I would definitely
        stay here again.</string>
    <string name="sample_description">I have been a dog lover my whole life. It started with my family
        getting 4 labs when I was 10. We bred them for a few years, and I loved caring for the puppies
        and finding them quality homes. Once my husband and I got married we bought our first German
        Shepherd dog. We named her Princess. We add 3 more German Shepherds to our bunch, Princeton,
        Payle, and Parlay. They are wonderful, active, smart dogs and we have enjoyed every moment with them.</string>
    <string name="title_lsy_pettype">What type of pet do you want to host?</string>
    <string name="title_lsy_hometype">What type of space do you want to list?</string>
    <string name="title_lsy_city">What city is your place located in?</string>
    <string name="title_lsy_moreinfo">Just a little more info about your place</string>
    <string name="title_pet_count">Number of pets in House</string>
    <string name="title_pet_type">Pet Type</string>
    <string name="title_pet_size">Pet Size</string>
    <string name="title_pet_playground">Pet Playground</string>
    <string name="myl_title">Write Title</string>
    <string name="myl_titleHint">Give your listing a descriptive headline</string>
    <string name="myl_summary">Write Summary</string>
    <string name="myl_summaryHint">Summarize the highlights of your listing</string>
    <string name="myl_price">Set Price</string>
    <string name="myl_priceHint">Try our suggested price to start</string>
    <string name="myl_address">Set Address</string>
    <string name="wordCount"><b>%1$d</b> words left</string>
    <string name="myl_priceTitle">Price per day</string>
    <string name="currencyUnit">$</string>
    <string name="suggestedPriceHint">We suggest $77 per night based on similar listings in your area.</string>
    <string name="cc_number">Number</string>
    <string name="cc_number_hint">1234 1234 1234 1234</string>
    <string name="cc_expiry">Expiry</string>
    <string name="cc_expiry_hint">mm / yy</string>
    <string name="scan_card">Scan your card using the camera!</string>
    <string name="enter_manually">Enter your card details:</string>
</resources>