<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.petbnbcodepath.activities.PaymentActivity"
    android:background="@color/bgWhite">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/vl_white"
        android:title="@string/title_activity_booking_details"
        android:layout_alignParentTop="true"
        >
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/tvScan"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/pay_det_tv_height"
        android:textColor="@color/dark_gray"
        android:text="@string/scan_card"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_below="@+id/toolbar"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"/>

    <ImageButton
        android:id="@+id/scanButton"
        android:layout_width="@dimen/pay_det_button_size"
        android:layout_height="@dimen/pay_det_button_size"
        android:onClick="onScanPress"
        android:background="@drawable/circular_button"
        android:src="@mipmap/addcc"
        android:layout_below="@+id/tvScan"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
    />

    <LinearLayout
        android:id="@+id/divScanButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/pay_det_margin_vert"
        android:layout_marginTop="@dimen/pay_det_margin_vert"
        android:layout_below="@+id/scanButton"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin">

        <View
            android:layout_width="@dimen/zero_width"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:layout_marginTop="@dimen/pay_det_padding_top"/>
        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_width="@dimen/zero_width"
            android:layout_height="wrap_content"
            android:textColor="@color/light_gray"
            android:layout_weight="1"
            android:text="@string/or"
            android:textAllCaps="true"
            android:gravity="center"/>
        <View
            android:layout_width="@dimen/zero_width"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:layout_marginTop="@dimen/pay_det_padding_top"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvEnterManually"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/pay_det_tv_height"
        android:layout_below="@+id/divScanButton"
        android:textColor="@color/dark_gray"
        android:text="@string/enter_manually"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/tvCardNumber"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/pay_det_tv_height"
        android:paddingTop="@dimen/pay_det_padding_top"
        android:paddingRight="@dimen/pay_det_padding_top"
        android:paddingEnd="@dimen/pay_det_padding_top"
        android:textColor="@color/light_gray"
        android:text="@string/cc_number"
        android:background="@color/white"
        android:layout_below="@+id/tvEnterManually"
        android:textAlignment="center"
        android:paddingLeft="@dimen/card_num_padding"
        android:paddingStart="@dimen/card_num_padding"/>
    <EditText
        android:id="@+id/etCCNumber"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/pay_det_tv_height"
        android:layout_toEndOf="@+id/tvCardNumber"
        android:layout_toRightOf="@+id/tvCardNumber"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/white"
        android:singleLine="true"
        android:inputType="number"
        android:maxLength="19"
        android:hint="@string/cc_number_hint"
        android:textColorHint="@color/dark_gray"
        android:textColor="@color/dark_gray"
        android:layout_below="@+id/tvEnterManually"
        android:textAlignment="center"
        android:paddingBottom="@dimen/pay_det_padding_top"
        />

    <TextView
        android:id="@+id/tvExpiry"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/pay_det_tv_height"
        android:paddingTop="@dimen/pay_det_padding_top"
        android:paddingLeft="@dimen/card_num_padding"
        android:paddingStart="@dimen/card_num_padding"
        android:paddingRight="@dimen/pay_det_padding_top"
        android:paddingEnd="@dimen/pay_det_padding_top"
        android:textColor="@color/light_gray"
        android:text="@string/cc_expiry"
        android:background="@color/white"
        android:layout_below="@+id/tvCardNumber"/>
    <EditText
        android:id="@+id/etExpiry"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/pay_det_tv_height"
        android:layout_toEndOf="@+id/tvExpiry"
        android:layout_toRightOf="@+id/tvExpiry"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/white"
        android:singleLine="true"
        android:inputType="date"
        android:layout_below="@+id/etCCNumber"
        android:hint="@string/cc_expiry_hint"
        android:textColorHint="@color/dark_gray"
        android:textColor="@color/dark_gray"
        android:paddingBottom="@dimen/pay_det_padding_top"/>

    <ImageButton
        android:id="@+id/btnSaveCC"
        android:layout_width="@dimen/pay_det_button_size"
        android:layout_height="@dimen/pay_det_button_size"
        android:onClick="onScanPress"
        android:background="@drawable/circular_button"
        android:src="@mipmap/savecc"
        android:layout_below="@+id/tvExpiry"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        />

</RelativeLayout>
