<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:fillViewport="true"
        android:background="@color/gray">
        <LinearLayout
            android:id="@+id/header"
            android:orientation="vertical"
            android:layout_height="600dp"
            android:layout_width="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="@dimen/gg_default_margin"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/myl_price"
                    android:textColor="@color/teal"
                    android:layout_margin="@dimen/gg_default_margin"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/tvTitle" />
                <EditText
                    android:id="@+id/etValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/myl_titleHint"
                    android:layout_margin="10dp"
                    android:textColor="@color/gg_dark_gray"
                    android:textColorHint="@color/gg_light_gray"
                    android:background="@drawable/rounded_edit_text"
                    android:minLines="2"
                    android:padding="@dimen/padding_small" />

            </LinearLayout>
            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">
            </FrameLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/gg_light_gray"
                android:id="@+id/linearLayout"
                android:layout_alignParentBottom="true">
                <ImageView
                    android:id="@+id/ivHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_lightbulb_sm_blue"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wordCount"
                    android:textColor="@color/gg_dark_gray"
                    android:id="@+id/tvWordCount"
                    android:layout_gravity="right"
                    android:paddingRight="2dp"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>