<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="0dp"
    android:background="@color/white"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:fillViewport="true"
        android:background="@color/gray">
        <LinearLayout
            android:id="@+id/header"
            android:orientation="vertical"
            android:layout_height="600dp"
            android:layout_width="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="482dp"
                android:layout_alignParentLeft="true"
                >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/myl_priceTitle"
                        android:textColor="@color/teal"
                        android:layout_marginTop="45dp"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/tvPriceTitle" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/currencyUnit"
                        android:minLines="1"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/white"
                        android:textColor="@color/dark_gray"
                        android:digits="1234567890"
                        android:padding="2dp"
                        />
                    <EditText
                        android:id="@+id/etValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/currencyUnit"
                        android:textColor="@color/dark_gray"
                        android:minLines="1"
                        android:minWidth="40dp"
                        android:layout_gravity="center_horizontal"
                        android:inputType="phone"
                        android:background="@color/white"
                    />
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/suggestedPriceHint"
                    android:id="@+id/tvSuggestedPrice"
                    android:layout_margin="25dp"
                    android:textColor="@color/light_gray" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">
            </FrameLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/gg_light_gray"
                android:id="@+id/linearLayout"
                android:layout_alignParentBottom="true">
                <ImageView
                    android:id="@+id/ivHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_lightbulb_sm_blue"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>